tests/miniJava/neg/005179_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { { } } } class java { public int [] java ( int [] this java ) { return 0 ; } }
